# rust_raytracing

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  gui.rs  hittable.rs  imagegenerator.rs  main.rs  material.rs  ray.rs  sphere.rs
